# pliar

./: .gitignore  LICENSE  README.md  obtain_data.py  pyproject.toml  run_pliar.py
data/predictions/: clean.csv
data/processed/: .gitignore
notebooks/: accuracy.ipynb  alignment.ipynb  analyzing_plip_interactions.ipynb  ifp_models.ipynb  run_pliar.ipynb
src/pliar/: columns.py  common.py  main.py  metrics.py  stability_selection.py
