[project]
name = "kinodata-pli-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.35.1",
    "typer>=0.20.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tools.setuptools.packages.find]
where = ["src"]
